--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update -q -y \
         acl \
         sudo \
 # Needed for the php extensions we enable below
+        libxml2 \
         libfreetype6 \
         libjpeg62-turbo \
         libxpm4 \
@@ -50,7 +51,7 @@ RUN set -xe \
     && docker-php-ext-configure mysqli --with-mysqli=mysqlnd \
     && docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ --with-xpm-dir=/usr/include/ --enable-gd-jis-conv \
-    && docker-php-ext-install exif gd mbstring intl xsl zip mysqli pdo_mysql \
+    && docker-php-ext-install exif gd bcmath mbstring intl xsl zip mysqli pdo_mysql xml soap \
     && docker-php-ext-enable opcache \
     && cp /usr/src/php/php.ini-production ${PHP_INI_DIR}/php.ini \
     \
