--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -29,8 +29,7 @@ RUN apt-get update -q -y \
         libmemcachedutil2 \
 # Required by eZ Commerce
         imagemagick \
-# git & un
-needed for composer, unless we document to use dev image for composer install
+# git & unneeded for composer, unless we document to use dev image for composer install
 # unzip needed due to https://github.com/composer/composer/issues/4471
 	zip \
         unzip \
