--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -101,7 +101,7 @@ RUN mkdir -p $COMPOSER_HOME \
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Install phpunit and put binary into $PATH
-RUN curl -sSLo phpunit.phar https://phar.phpunit.de/phpunit.phar \
+RUN curl -sSLo phpunit.phar https://phar.phpunit.de/phpunit-6.5.9.phar \
     && chmod 755 phpunit.phar \
     && mv phpunit.phar /usr/local/bin/ \
     && ln -s /usr/local/bin/phpunit.phar /usr/local/bin/phpunit
