--- a/conf.d/php.ini
+++ b/conf.d/php.ini
@@ -1,6 +1,7 @@
 ; Set defaults that should be enough for most normal use.
 memory_limit=256M
 max_execution_time=90
+error_reporting=E_ALL
 
 ; Set timezone, uses UTC by default to make sure data is stored in universial time.
 ; Adjust your existing data if you have any if you change this, and also make sure it's configured for the os:
