--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update -q -y \
     && apt-get install -q -y --no-install-recommends \
         ca-certificates \
 	bash \
+	procps \
         curl \
         acl \
         sudo \
