added libmcrypt4 as dependency

--- a/7.1/Dockerfile
+++ b/7.1/Dockerfile
@@ -45,6 +45,7 @@ RUN set -xe \
         $PHP_EXTRA_BUILD_DEPS \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
+        libmcrypt4 \
         libxpm-dev \
         libpng-dev \
         libicu-dev \
