--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -148,6 +148,17 @@ RUN curl -LO https://deployer.org/deployer.phar \
 # Install security checker
 RUN php -r "readfile('http://get.sensiolabs.org/security-checker.phar');" > /usr/local/bin/security-checker \
     && chmod +x /usr/local/bin/security-checker
+    
+ENV DOCKERVERSION=17.12.0-ce
+RUN curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz \
+  && mv docker-${DOCKERVERSION}.tgz docker.tgz \
+  && tar xzvf docker.tgz \
+  && mv docker/docker /usr/local/bin \
+  && rm -r docker docker.tgz
+RUN curl -L https://github.com/docker/compose/releases/download/1.22.0/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
+RUN base=https://github.com/docker/machine/releases/download/v0.14.0 && \
+    curl -L $base/docker-machine-$(uname -s)-$(uname -m) > /tmp/docker-machine && \
+    install /tmp/docker-machine /usr/local/bin/docker-machine
 
 # As application is put in as volume we do all needed operation on run
 COPY scripts /scripts
